--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,17 +1,16 @@
 spring.application.name=InventoryMgtSystem
-server.port=5050
 
-#MYSQL CONNECTION
-spring.datasource.url=jdbc:mysql://localhost:3306/inv
-spring.datasource.username=root
-spring.datasource.password=Tannu@1230177
+server.port=${PORT:8080}   ✅ (Render dynamic port use karta hai)
+
+spring.datasource.url=${SPRING_DATASOURCE_URL}   ✅ (Cloud MySQL connection)
+spring.datasource.username=${SPRING_DATASOURCE_USERNAME}
+spring.datasource.password=${SPRING_DATASOURCE_PASSWORD}
+
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
-spring.jpa.hibernate.ddl-auto=update
+spring.jpa.hibernate.ddl-auto=update   ✅ (auto-create/update tables)
 
-
-#THE MAXIMUM SIGN OF IMAGE THAT CAN BE UPLOADED
 spring.servlet.multipart.max-file-size=2GB
 spring.servlet.multipart.max-request-size=2GB
-secreteJwtString=phegondev123456789phegondev123456789
 
+secreteJwtString=phegondev123456789phegondev123456789
